Colaboratory를 통해 생성됨

--- a/vae.ipynb
+++ b/vae.ipynb
@@ -142,6 +142,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
+        "collapsed": true,
         "outputId": "e981cf7c-fe4e-4693-ceaa-10c4dbe4e94a"
       },
       "source": [
@@ -228,6 +229,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 283
         },
+        "collapsed": true,
         "outputId": "d6d17861-5ee1-42b7-8698-7b94cd4f02ee"
       },
       "source": [
@@ -361,6 +363,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
+        "collapsed": true,
         "outputId": "2357a759-6461-4ead-d689-1cbc1f6b4819"
       },
       "source": [
@@ -929,6 +932,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
+        "collapsed": true,
         "outputId": "c7eb6b26-538c-443a-add4-6f00dc2aeea7"
       },
       "source": [
