Colaboratory를 통해 생성됨

--- a/vae.ipynb
+++ b/vae.ipynb
@@ -48,7 +48,6 @@
         "\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
-        "from tqdm import tqdm_notebook\n",
         "\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -72,17 +71,17 @@
       "metadata": {
         "id": "N3zMpL2nB-CL",
         "colab_type": "code",
+        "outputId": "bb097da8-94aa-4016-ae67-097d7c67af3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        },
-        "outputId": "bb097da8-94aa-4016-ae67-097d7c67af3b"
+        }
       },
       "source": [
         "print(torch.__version__)\n",
         "print(torchvision.__version__)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,12 +137,12 @@
       "metadata": {
         "id": "gSqUklvxB-Cg",
         "colab_type": "code",
+        "collapsed": true,
+        "outputId": "e981cf7c-fe4e-4693-ceaa-10c4dbe4e94a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        },
-        "collapsed": true,
-        "outputId": "e981cf7c-fe4e-4693-ceaa-10c4dbe4e94a"
+        }
       },
       "source": [
         "mnist_train, mnist_valid = torch.utils.data.random_split(\n",
@@ -152,7 +151,7 @@
         "\n",
         "mnist_test = MNIST(datasets_root, train=False, transform=transform)"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,17 +224,17 @@
       "metadata": {
         "id": "KxGv3ZFQB-Cq",
         "colab_type": "code",
+        "collapsed": true,
+        "outputId": "d6d17861-5ee1-42b7-8698-7b94cd4f02ee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        },
-        "collapsed": true,
-        "outputId": "d6d17861-5ee1-42b7-8698-7b94cd4f02ee"
+        }
       },
       "source": [
         "fashion_test = FashionMNIST(datasets_root, train=False, download=True, transform=transform)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,12 +358,12 @@
       "metadata": {
         "id": "6O9FIhsdB-C6",
         "colab_type": "code",
+        "collapsed": true,
+        "outputId": "2357a759-6461-4ead-d689-1cbc1f6b4819",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 143
-        },
-        "collapsed": true,
-        "outputId": "2357a759-6461-4ead-d689-1cbc1f6b4819"
+        }
       },
       "source": [
         "try:\n",
@@ -386,7 +385,7 @@
         "        download=True,\n",
         "        transform=emnist_transform)"
       ],
-      "execution_count": 69,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,11 +432,11 @@
       "metadata": {
         "id": "rp3RY76NXpXv",
         "colab_type": "code",
+        "outputId": "3aec0e30-6d69-418c-82ab-fe0d39098613",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
-        },
-        "outputId": "3aec0e30-6d69-418c-82ab-fe0d39098613"
+        }
       },
       "source": [
         "print(f'MNIST Training: {len(mnist_train)}')\n",
@@ -447,7 +446,7 @@
         "print(f'Fashion-MNIST Test: {len(fashion_test)}')\n",
         "print(f'EMNIST/letters Test: {len(letters_test)}')"
       ],
-      "execution_count": 112,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -498,16 +497,16 @@
       "metadata": {
         "id": "1HlgwWsAB-DD",
         "colab_type": "code",
+        "outputId": "e95b636a-7b77-4f54-b52f-c268750c16bf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        },
-        "outputId": "e95b636a-7b77-4f54-b52f-c268750c16bf"
+        }
       },
       "source": [
         "show_mnist(mnist_test, end=64)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -528,16 +527,16 @@
       "metadata": {
         "id": "8LD6cwN1B-DI",
         "colab_type": "code",
+        "outputId": "f6d88f58-59dc-491b-c587-bb3afa2725c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        },
-        "outputId": "f6d88f58-59dc-491b-c587-bb3afa2725c4"
+        }
       },
       "source": [
         "show_mnist(fashion_test)"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -558,16 +557,16 @@
       "metadata": {
         "id": "VrAhsvVYB-DL",
         "colab_type": "code",
+        "outputId": "8c983d75-58a3-47ce-8341-daff54062f61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        },
-        "outputId": "8c983d75-58a3-47ce-8341-daff54062f61"
+        }
       },
       "source": [
         "show_mnist(letters_test)"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -829,7 +828,7 @@
         "       \n",
         "    #log_interval = int(len(data_loader) / 10)\n",
         "    \n",
-        "    for batch_idx, (data, _) in enumerate(tqdm_notebook(data_loader)):\n",
+        "    for batch_idx, (data, _) in enumerate(data_loader):\n",
         "        data = data.to(device)\n",
         "        \n",
         "        optimizer.zero_grad()\n",
@@ -928,12 +927,12 @@
       "metadata": {
         "id": "C8-vdHojB-EC",
         "colab_type": "code",
+        "collapsed": true,
+        "outputId": "c7eb6b26-538c-443a-add4-6f00dc2aeea7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "collapsed": true,
-        "outputId": "c7eb6b26-538c-443a-add4-6f00dc2aeea7"
+        }
       },
       "source": [
         "for epoch in range(1, epochs + 1):\n",
@@ -945,7 +944,7 @@
         "    print(f'[Epoch: {epoch}/{epochs}] Training Loss: {train_loss:.4f} = Reconstruction Error ({train_reco_error:.4f}) + KL Divergence({train_kld:.4f})')\n",
         "    print(f'[Epoch: {epoch}/{epochs}] Validation Loss: {valid_loss:.4f} = Reconstruction Error ({valid_reco_error:.4f}) + KL Divergence({valid_kld:.4f})')"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3467,11 +3466,11 @@
       "metadata": {
         "id": "9f1IwwycPixb",
         "colab_type": "code",
+        "outputId": "81611a10-0f43-4375-ace3-d6637c7da39f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 473
-        },
-        "outputId": "81611a10-0f43-4375-ace3-d6637c7da39f"
+        }
       },
       "source": [
         "with torch.no_grad():\n",
@@ -3480,7 +3479,7 @@
         "    x_recon = decoder(z).cpu()\n",
         "show_mnist(x_recon)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3509,7 +3508,7 @@
         "\n",
         "    with torch.no_grad():\n",
         "        model.eval()\n",
-        "        for x, _ in tqdm_notebook(data_loader):\n",
+        "        for x, _ in data_loader:\n",
         "            x = x.to(device)\n",
         "            x_reco, _, _ = model(x)\n",
         "            error_batch = reconstruction_error(x_reco, x, reduction='none').mean(dim=1)\n",
@@ -3539,18 +3538,18 @@
       "metadata": {
         "id": "8pHjyBIjVA3x",
         "colab_type": "code",
+        "outputId": "95bf3801-9aad-47c0-813d-1f33d59d5a38",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
-        },
-        "outputId": "95bf3801-9aad-47c0-813d-1f33d59d5a38"
+        }
       },
       "source": [
         "mnist_reco_error = get_reconstruction_error(model, test_loader, device)\n",
         "fashion_reco_error = get_reconstruction_error(model, fashion_loader, device)\n",
         "letters_reco_error = get_reconstruction_error(model, letters_loader, device)"
       ],
-      "execution_count": 122,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3628,11 +3627,11 @@
       "metadata": {
         "id": "kOdHZ47pVKo-",
         "colab_type": "code",
+        "outputId": "7c235a30-74f8-4e51-f6b2-d589b0dd3b71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 504
-        },
-        "outputId": "7c235a30-74f8-4e51-f6b2-d589b0dd3b71"
+        }
       },
       "source": [
         "min_error = min([min(each) for  each in [mnist_reco_error, fashion_reco_error, letters_reco_error]])\n",
@@ -3651,7 +3650,7 @@
         "_ = ax.hist(letters_reco_error, label='EMNIST/letters', **hist_kwargs)\n",
         "ax.legend(fontsize=20)"
       ],
-      "execution_count": 126,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
